--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -9,7 +9,7 @@ all: build run
 build: racecheck_unittest
 
 racecheck_unittest: racecheck_unittest.cc thread_wrappers_pthread.h dynamic_annotations.cc dynamic_annotations.h
-	$(CXX)  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g -o $@
+	$(CXX) -DDYNAMIC_ANNOTATIONS=1  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g -o $@
 
 run: 
 	$(HELGRIND) --suppressions=helgrind.supp  ./racecheck_unittest $(TEST)
