Re-written ProducerConsumerQueue (former version was unacceptable for benchmarks). Changed test503's timing
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@594 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,18 +1,14 @@
-# simple make file, nothing special. 
+GCC = /home/timurrrr/mixed_gcc/g++
 
-HELGRIND='valgrind --tool=helgrind' 
-TEST=0
-CXX=g++
 
-all: build 
+default: 64
 
-build: racecheck_unittest
+64:
+	${GCC}  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g \
+		-DDYNAMIC_ANNOTATIONS=1 -o bin
+		
+	${GCC}  bigtest.cc dynamic_annotations.cc -lpthread -g \
+		-DDYNAMIC_ANNOTATIONS=1 -o bigtest	
 
-racecheck_unittest: racecheck_unittest.cc thread_wrappers_pthread.h dynamic_annotations.cc dynamic_annotations.h
-	$(CXX) -DDYNAMIC_ANNOTATIONS=1  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g -o $@
-
-run: 
-	$(HELGRIND) --suppressions=helgrind.supp  ./racecheck_unittest $(TEST)
-
-clean: 
-	rm -f racecheck_unittest 
+clean:
+	rm bin bigtest
