fix Makefile again
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@596 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -5,10 +5,10 @@ default: 64
 
 64:
 	${CXX}  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g \
-		-DDYNAMIC_ANNOTATIONS=1 -o bin
+		-DDYNAMIC_ANNOTATIONS=1 -o racecheck_unittest
 		
 	${CXX}  bigtest.cc dynamic_annotations.cc -lpthread -g \
 		-DDYNAMIC_ANNOTATIONS=1 -o bigtest	
 
 clean:
-	rm bin bigtest
+	rm -f racecheck_unittest bigtest
