--- a/cpp_vg/Makefile.core.am
+++ b/cpp_vg/Makefile.core.am
@@ -5,6 +5,7 @@ add_includes_x86_linux = -I$(top_srcdir)/coregrind \
 		-I$(top_srcdir)/coregrind/x86-linux \
 		-I$(top_srcdir)/include \
 		-I@VEX_DIR@/pub \
+		-I$(top_srcdir)/include/m_stl \
 		-DVG_PLATFORM="\"x86-linux\"" \
 		-DVGA_x86=1 \
 		-DVGO_linux=1 \
@@ -17,6 +18,7 @@ add_includes_amd64_linux = -I$(top_srcdir)/coregrind \
 		-I$(top_srcdir)/coregrind/amd64-linux \
 		-I$(top_srcdir)/include \
 		-I@VEX_DIR@/pub \
+		-I$(top_srcdir)/include/m_stl \
 		-DVG_PLATFORM="\"amd64-linux\"" \
 		-DVGA_amd64=1 \
 		-DVGO_linux=1 \
@@ -29,6 +31,7 @@ add_includes_ppc32_linux = -I$(top_srcdir)/coregrind \
 		-I$(top_srcdir)/coregrind/ppc32-linux \
 		-I$(top_srcdir)/include \
 		-I@VEX_DIR@/pub \
+		-I$(top_srcdir)/include/m_stl \
 		-DVG_PLATFORM="\"ppc32-linux\"" \
 		-DVGA_ppc32=1 \
 		-DVGO_linux=1 \
@@ -41,6 +44,7 @@ add_includes_ppc64_linux = -I$(top_srcdir)/coregrind \
 		-I$(top_srcdir)/coregrind/ppc64-linux \
 		-I$(top_srcdir)/include \
 		-I@VEX_DIR@/pub \
+		-I$(top_srcdir)/include/m_stl \
 		-DVG_PLATFORM="\"ppc64-linux\"" \
 		-DVGA_ppc64=1 \
 		-DVGO_linux=1 \
@@ -53,6 +57,7 @@ add_includes_ppc32_aix5 = -I$(top_srcdir)/coregrind \
 		-I$(top_srcdir)/coregrind/ppc32-aix5 \
 		-I$(top_srcdir)/include \
 		-I@VEX_DIR@/pub \
+		-I$(top_srcdir)/include/m_stl \
 		-DVG_PLATFORM="\"ppc32-aix5\"" \
 		-DVGA_ppc32=1 \
 		-DVGO_aix5=1 \
@@ -65,6 +70,7 @@ add_includes_ppc64_aix5 = -I$(top_srcdir)/coregrind \
 		-I$(top_srcdir)/coregrind/ppc64-aix5 \
 		-I$(top_srcdir)/include \
 		-I@VEX_DIR@/pub \
+		-I$(top_srcdir)/include/m_stl \
 		-DVG_PLATFORM="\"ppc64-aix5\"" \
 		-DVGA_ppc64=1 \
 		-DVGO_aix5=1 \
