--- a/cpp_vg/Makefile.flags.am
+++ b/cpp_vg/Makefile.flags.am
@@ -1,10 +1,14 @@
 
 # Baseline flags for all compilations.  Aim here is to maximise
 # performance and get whatever useful warnings we can out of gcc.
-AM_CFLAGS_BASE = -O2 -g -Wmissing-prototypes -Wall -Wshadow \
-                 -Wpointer-arith -Wstrict-prototypes -Wmissing-declarations \
-		 @FLAG_W_NO_FORMAT_ZERO_LENGTH@ \
-                 -fno-strict-aliasing
+AM_C_CXX_FLAGS = -O2 -g \
+		 -Wall -Wshadow -Wpointer-arith -Wmissing-declarations \
+		 -fno-strict-aliasing
+AM_CFLAGS_BASE = $(AM_C_CXX_FLAGS) \
+		 -Wmissing-prototypes -Wstrict-prototypes \
+		 @FLAG_W_NO_FORMAT_ZERO_LENGTH@
+AM_CXXFLAGS_BASE = $(AM_C_CXX_FLAGS) \
+		 -fno-exceptions -fno-rtti
 
 # These flags are used for building the preload shared objects.
 # The aim is to give reasonable performance but also to have good
@@ -17,33 +21,41 @@ AM_FLAG_M3264_X86_LINUX   = @FLAG_M32@
 AM_CPPFLAGS_X86_LINUX     = $(add_includes_x86_linux)
 AM_CFLAGS_X86_LINUX       = $(WERROR) @FLAG_M32@ @PREFERRED_STACK_BOUNDARY@ \
 			 	$(AM_CFLAGS_BASE)
+AM_CXXFLAGS_X86_LINUX     = $(WERROR) @FLAG_M32@ @PREFERRED_STACK_BOUNDARY@ \
+				$(AM_CXXFLAGS_BASE)
 AM_CCASFLAGS_X86_LINUX    = $(add_includes_x86_linux) @FLAG_M32@ -g
 
 AM_FLAG_M3264_AMD64_LINUX = @FLAG_M64@
 AM_CPPFLAGS_AMD64_LINUX   = $(add_includes_amd64_linux)
 AM_CFLAGS_AMD64_LINUX     = $(WERROR) @FLAG_M64@ -fomit-frame-pointer \
 				@PREFERRED_STACK_BOUNDARY@ $(AM_CFLAGS_BASE)
+AM_CXXFLAGS_AMD64_LINUX   = $(WERROR) @FLAG_M64@ -fno-omit-frame-pointer \
+                                @PREFERRED_STACK_BOUNDARY@ $(AM_CXXFLAGS_BASE)
 AM_CCASFLAGS_AMD64_LINUX  = $(add_includes_amd64_linux) @FLAG_M64@ -g
 
 AM_FLAG_M3264_PPC32_LINUX = @FLAG_M32@
 AM_CPPFLAGS_PPC32_LINUX   = $(add_includes_ppc32_linux)
 AM_CFLAGS_PPC32_LINUX     = $(WERROR) @FLAG_M32@ $(AM_CFLAGS_BASE)
+AM_CXXFLAGS_PPC32_LINUX   = $(WERROR) @FLAG_M32@ $(AM_CXXFLAGS_BASE)
 AM_CCASFLAGS_PPC32_LINUX  = $(add_includes_ppc32_linux) -Wa,-maltivec @FLAG_M32@ -g
 
 AM_FLAG_M3264_PPC64_LINUX = @FLAG_M64@
 AM_CPPFLAGS_PPC64_LINUX   = $(add_includes_ppc64_linux)
 AM_CFLAGS_PPC64_LINUX     = $(WERROR) @FLAG_M64@ $(AM_CFLAGS_BASE)
+AM_CXXFLAGS_PPC64_LINUX   = $(WERROR) @FLAG_M64@ $(AM_CXXFLAGS_BASE)
 AM_CCASFLAGS_PPC64_LINUX  = $(add_includes_ppc64_linux) -Wa,-maltivec @FLAG_M64@ -g
 
 AM_FLAG_M3264_PPC32_AIX5  = @FLAG_MAIX32@
 AM_CPPFLAGS_PPC32_AIX5    = $(add_includes_ppc32_aix5)
 AM_CFLAGS_PPC32_AIX5      = $(WERROR) @FLAG_MAIX32@ -mcpu=powerpc $(AM_CFLAGS_BASE)
+AM_CXXFLAGS_PPC32_AIX5    = $(WERROR) @FLAG_MAIX32@ -mcpu=powerpc $(AM_CXXFLAGS_BASE)
 AM_CCASFLAGS_PPC32_AIX5   = $(add_includes_ppc32_aix5) \
 				@FLAG_MAIX32@ -mcpu=powerpc -g
 
 AM_FLAG_M3264_PPC64_AIX5  = @FLAG_MAIX64@
 AM_CPPFLAGS_PPC64_AIX5    = $(add_includes_ppc64_aix5)
 AM_CFLAGS_PPC64_AIX5      = $(WERROR) @FLAG_MAIX64@ -mcpu=powerpc64 $(AM_CFLAGS_BASE)
+AM_CXXFLAGS_PPC64_AIX5    = $(WERROR) @FLAG_MAIX64@ -mcpu=powerpc64 $(AM_CXXFLAGS_BASE)
 AM_CCASFLAGS_PPC64_AIX5   = $(add_includes_ppc64_aix5) \
 				@FLAG_MAIX64@ -mcpu=powerpc64 -g
 
@@ -54,6 +66,7 @@ AM_CCASFLAGS_PPC64_AIX5   = $(add_includes_ppc64_aix5) \
 AM_FLAG_M3264_PRI = $(AM_FLAG_M3264_@VG_PLATFORM_PRI@)
 AM_CPPFLAGS_PRI   = $(AM_CPPFLAGS_@VG_PLATFORM_PRI@)
 AM_CFLAGS_PRI     = $(AM_CFLAGS_@VG_PLATFORM_PRI@)
+AM_CXXFLAGS_PRI   = $(AM_CXXFLAGS_@VG_PLATFORM_PRI@)
 AM_CCASFLAGS_PRI  = $(AM_CCASFLAGS_@VG_PLATFORM_PRI@)
 
 if VGP_HAVE_SECONDARY
