--- a/cpp_vg/configure.in
+++ b/cpp_vg/configure.in
@@ -1626,6 +1626,9 @@ AC_OUTPUT(
    callgrind/callgrind_control
    callgrind/tests/Makefile
    callgrind/docs/Makefile
+   cppgrind/Makefile
+   cppgrind/docs/Makefile
+   cppgrind/tests/Makefile
    helgrind/Makefile
    helgrind/tests/Makefile
    helgrind/docs/Makefile
