moved coregrind/m_stl/symbols.cc to coregrind/m_cplusplus_support.cc
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@639 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/cpp_vg/coregrind/Makefile.am
+++ b/cpp_vg/coregrind/Makefile.am
@@ -223,7 +223,7 @@ COREGRIND_SOURCES_COMMON = \
 	m_scheduler/scheduler.c \
 	m_scheduler/sema.c \
 	m_syswrap/syswrap-main.c \
-	m_stl/symbols.cc \
+	m_cplusplus_support.cc \
 	m_stl/src/tree.cc \
 	m_stl/src/string-inst.cc \
 	m_stl/src/functexcept.cc
