test400. Also, Mutex::Unlock() will now signal every time (makes LockWhen more friendly to tsan)
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@665 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,12 +1,12 @@
 CXX=g++
 
 
-all:
-	${CXX}  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g \
-		-DDYNAMIC_ANNOTATIONS=1 -o racecheck_unittest
-		
-	${CXX}  bigtest.cc dynamic_annotations.cc -lpthread -g \
-		-DDYNAMIC_ANNOTATIONS=1 -o bigtest	
+all: racecheck_unittest bigtest
+
+racecheck_unittest: racecheck_unittest.cc dynamic_annotations.h thread_wrappers_pthread.h
+	${CXX}  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o racecheck_unittest
+bigtest: bigtest.cc dynamic_annotations.h thread_wrappers_pthread.h
+	${CXX}  bigtest.cc dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o bigtest
 
 clean:
 	rm -f racecheck_unittest bigtest
