added optimized targets in Makefile
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@834 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,12 +1,17 @@
 CXX=g++
 
+SUFFIX=
+CXXFLAGS=
 
-all: racecheck_unittest bigtest
+all: racecheck_unittest${SUFFIX} bigtest${SUFFIX}
+O1: 
+	make SUFFIX=.O1 CXXFLAGS="-O1 -fno-inline"
+O2: 
+	make SUFFIX=.O2 CXXFLAGS="-O2 -fno-inline"
+all_opt: all O1 O2
 
-racecheck_unittest: racecheck_unittest.cc dynamic_annotations.h thread_wrappers_pthread.h
-	${CXX}  racecheck_unittest.cc dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o racecheck_unittest
-bigtest: bigtest.cc dynamic_annotations.h thread_wrappers_pthread.h
-	${CXX}  bigtest.cc dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o bigtest
+%${SUFFIX}: %.cc dynamic_annotations.h thread_wrappers_pthread.h
+	${CXX} ${CXXFLAGS} $< dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o $@
 
 clean:
-	rm -f racecheck_unittest bigtest
+	rm -f racecheck_unittest bigtest *.O1 *.O2
