some more cleanup
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1011 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -12,7 +12,7 @@ O2:
 all_opt: all O1 O2
 
 %${SUFFIX}: %.cc dynamic_annotations.h thread_wrappers_pthread.h
-	${CXX} ${CXXFLAGS} $< -Wall dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o $@
+	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare  dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o $@
 
 clean:
 	rm -f racecheck_unittest bigtest *.O1 *.O2
