--- a/jtsan/Makefile
+++ b/jtsan/Makefile
@@ -1,23 +1,17 @@
-
-
-# Pass the correct path to junit.jar.
-# On Ubuntu, use this to install JUnit: 
-#   sudo apt-get install junit4
-JUNIT=/usr/share/java/junit4.jar
 # Pass the correct path to MTRAT.
 MTRAT=mtrat
 
 # Build the unittests.
 ThreadSanitizerTest.class: ThreadSanitizerTest.java
-	javac -cp $(JUNIT) ThreadSanitizerTest.java
+	javac ThreadSanitizerTest.java
 
 # Run the unittests natively.
 run: ThreadSanitizerTest.class
-	java -cp .:$(JUNIT) ThreadSanitizerTest
+	java -ea -cp . ThreadSanitizerTest
 
 # Run the unittests under MTRAT.
 mtrat: ThreadSanitizerTest.class
-	$(MTRAT) -cp .:$(JUNIT) ThreadSanitizerTest
+	$(MTRAT) -ea -cp . ThreadSanitizerTest
 
 # Clean
 clean:
