--- a/tsan/Makefile.am
+++ b/tsan/Makefile.am
@@ -1,6 +1,8 @@
 include $(top_srcdir)/Makefile.tool.am
 
 noinst_PROGRAMS = 
+noinst_DSYMS =
+
 if VGCONF_PLATFORMS_INCLUDE_X86_LINUX
 noinst_PROGRAMS += tsan-x86-linux vgpreload_tsan-x86-linux.so
 endif
@@ -18,6 +20,11 @@ noinst_PROGRAMS += tsan-ppc32-aix5 vgpreload_tsan-ppc32-aix5.so
 endif
 if VGCONF_PLATFORMS_INCLUDE_PPC64_AIX5
 noinst_PROGRAMS += tsan-ppc64-aix5 vgpreload_tsan-ppc64-aix5.so
+endif
+
+if VGCONF_PLATFORMS_INCLUDE_X86_DARWIN
+noinst_PROGRAMS += tsan-x86-darwin vgpreload_tsan-x86-darwin.so
+noinst_DSYMS    +=                     vgpreload_tsan-x86-darwin.so
 endif
 
 VGPRELOAD_TSAN_SOURCES_COMMON = ts_valgrind_intercepts.c 
@@ -76,6 +83,13 @@ vgpreload_tsan_ppc64_aix5_so_LDFLAGS      = \
 
 #$(LIBREPLACEMALLOC_LDFLAGS_PPC64_AIX5)
 
+vgpreload_tsan_x86_darwin_so_SOURCES      = $(VGPRELOAD_TSAN_SOURCES_COMMON)
+vgpreload_tsan_x86_darwin_so_CPPFLAGS     = $(AM_CPPFLAGS_X86_DARWIN)
+vgpreload_tsan_x86_darwin_so_CFLAGS       = $(AM_CFLAGS_X86_DARWIN) $(AM_CFLAGS_PIC)
+vgpreload_tsan_x86_darwin_so_DEPENDENCIES = $(LIBREPLACEMALLOC_X86_DARWIN)
+vgpreload_tsan_x86_darwin_so_LDFLAGS      = \
+					      $(PRELOAD_LDFLAGS_X86_DARWIN)
+
 
 TSAN_SOURCES_COMMON = ts_valgrind.cc thread_sanitizer.cc
 
@@ -126,3 +140,12 @@ tsan_ppc64_aix5_CXXFLAGS       = $(AM_CXXFLAGS_PPC64_AIX5)
 tsan_ppc64_aix5_DEPENDENCIES = $(COREGRIND_LIBS_PPC64_AIX5)
 tsan_ppc64_aix5_LDADD        = $(TOOL_LDADD_PPC64_AIX5)
 tsan_ppc64_aix5_LDFLAGS      = $(TOOL_LDFLAGS_PPC64_AIX5)
+
+tsan_x86_darwin_SOURCES      = $(TSAN_SOURCES_COMMON)
+tsan_x86_darwin_CPPFLAGS     = $(AM_CPPFLAGS_X86_DARWIN)
+tsan_x86_darwin_CFLAGS       = $(AM_CFLAGS_X86_DARWIN) -O2 -fno-weak -bind_at_load -fno-exceptions
+tsan_x86_darwin_CXXFLAGS     = $(AM_CXXFLAGS_X86_DARWIN) -O2 -fno-weak -bind_at_load -Istlport -fno-exceptions
+tsan_x86_darwin_DEPENDENCIES = $(COREGRIND_LIBS_X86_DARWIN)
+tsan_x86_darwin_LDADD        = $(TOOL_LDADD_X86_DARWIN)
+tsan_x86_darwin_LDFLAGS      = $(TOOL_LDFLAGS_X86_DARWIN)
+
