get rid of custom dynamic_annotations; use standard ones
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1154 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -11,8 +11,15 @@ O2:
 	make SUFFIX=.O2 CXXFLAGS="-O2 -fno-inline"
 all_opt: all O1 O2
 
-%${SUFFIX}: %.cc dynamic_annotations.h thread_wrappers_pthread.h
-	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow -Wempty-body  dynamic_annotations.cc -lpthread -g -DDYNAMIC_ANNOTATIONS=1 -o $@
+DYNAMIC_ANNOTATIONS_DIR=../dynamic_annotations
+DYNAMIC_ANNOTATIONS_H=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.h
+DYNAMIC_ANNOTATIONS_CC=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.cc
+DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_CC} ${DYNAMIC_ANNOTATIONS_H}
+
+%${SUFFIX}: %.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers_pthread.h
+	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow -Wempty-body  \
+		 -I${DYNAMIC_ANNOTATIONS_DIR} ${DYNAMIC_ANNOTATIONS_CC} \
+		 -lpthread -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -o $@
 
 clean:
 	rm -f racecheck_unittest bigtest *.O1 *.O2
