Remove -Wempty-body
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1157 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -17,7 +17,7 @@ DYNAMIC_ANNOTATIONS_CC=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.cc
 DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_CC} ${DYNAMIC_ANNOTATIONS_H}
 
 %${SUFFIX}: %.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers_pthread.h
-	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow -Wempty-body  \
+	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow  \
 		 -I${DYNAMIC_ANNOTATIONS_DIR} ${DYNAMIC_ANNOTATIONS_CC} \
 		 -lpthread -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -o $@
 
