makefile for PIN driver
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1198 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/pin/Makefile
+++ b/tsan/pin/Makefile
@@ -16,7 +16,7 @@ LIBS= -lpin  -lxed -ldwarf -lelf -ldl
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ -c $<
 
-all_tests: simple_pin_test.so
+all_tests: simple_pin_test.so ts_pin.so
 
 
 clean:
