Disabled RTTI for Darwin build (ThreadSanitizer won't build on Mac OS with RTTI enabled).
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1259 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile.am
+++ b/tsan/Makefile.am
@@ -143,8 +143,8 @@ tsan_ppc64_aix5_LDFLAGS      = $(TOOL_LDFLAGS_PPC64_AIX5)
 
 tsan_x86_darwin_SOURCES      = $(TSAN_SOURCES_COMMON)
 tsan_x86_darwin_CPPFLAGS     = $(AM_CPPFLAGS_X86_DARWIN)
-tsan_x86_darwin_CFLAGS       = $(AM_CFLAGS_X86_DARWIN) -O2 -fno-weak -bind_at_load -fno-exceptions
-tsan_x86_darwin_CXXFLAGS     = $(AM_CXXFLAGS_X86_DARWIN) -O2 -fno-weak -bind_at_load -Istlport -fno-exceptions
+tsan_x86_darwin_CFLAGS       = $(AM_CFLAGS_X86_DARWIN) -O2 -fno-weak -bind_at_load -fno-exceptions -fno-rtti
+tsan_x86_darwin_CXXFLAGS     = $(AM_CXXFLAGS_X86_DARWIN) -O2 -fno-weak -bind_at_load -Istlport -fno-exceptions -fno-rtti
 tsan_x86_darwin_DEPENDENCIES = $(COREGRIND_LIBS_X86_DARWIN)
 tsan_x86_darwin_LDADD        = $(TOOL_LDADD_X86_DARWIN)
 tsan_x86_darwin_LDFLAGS      = $(TOOL_LDFLAGS_X86_DARWIN)
