Add "win" rule to compile the unittest on Windows
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1279 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -21,5 +21,9 @@ DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_CC} ${DYNAMIC_ANNOTATIONS_H}
 		 -I${DYNAMIC_ANNOTATIONS_DIR} ${DYNAMIC_ANNOTATIONS_CC} \
 		 -lpthread -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -o $@
 
+win: racecheck_unittest.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_win.h
+	cl.exe ${CXXFLAGS} -DDYNAMIC_ANNOTATIONS_ENABLED=1 -DWIN32 \
+		-I${DYNAMIC_ANNOTATIONS_DIR} racecheck_unittest.cc ${DYNAMIC_ANNOTATIONS_CC}
+
 clean:
-	rm -f racecheck_unittest bigtest *.O1 *.O2
+	rm -f racecheck_unittest bigtest *.O1 *.O2 *.obj
