3-rd test for go
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1283 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/go_tests/Makefile
+++ b/go_tests/Makefile
@@ -1,6 +1,8 @@
 
 
-TESTS=go_race_1
+POSITIVE_TESTS=go_race_1 go_race_2
+NEGATIVE_TESTS=go_norace_1
+TESTS=$(POSITIVE_TESTS) $(NEGATIVE_TESTS)
 all: $(TESTS)
 
 %.o: %.go
