4-th test for go
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1285 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/go_tests/Makefile
+++ b/go_tests/Makefile
@@ -1,7 +1,7 @@
 
 
 POSITIVE_TESTS=go_race_1 go_race_2
-NEGATIVE_TESTS=go_norace_1
+NEGATIVE_TESTS=go_norace_1 go_norace_2
 TESTS=$(POSITIVE_TESTS) $(NEGATIVE_TESTS)
 all: $(TESTS)
 
