windows port (1-st iteration)
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1331 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/pin/Makefile
+++ b/tsan/pin/Makefile
@@ -5,7 +5,7 @@ CXX=g++
 
 INLINE=
 OPTLEVEL=-O3
-CXXFLAGS=-DTS_NO_VALGRIND=1 -DTS_USE_STANDARD_STL=1 -Wall -Werror -Wno-unknown-pragmas -g $(OPTLEVEL) $(INLINE) -fno-omit-frame-pointer -DBIGARRAY_MULTIPLIER=1 -DUSING_XED -g -fno-strict-aliasing -DTARGET_IA32E -DHOST_IA32E -fPIC -DTARGET_LINUX
+CXXFLAGS=-Wall -Werror -Wno-unknown-pragmas -g $(OPTLEVEL) $(INLINE) -fno-omit-frame-pointer -DBIGARRAY_MULTIPLIER=1 -DUSING_XED -g -fno-strict-aliasing -DTARGET_IA32E -DHOST_IA32E -fPIC -DTARGET_LINUX
 INCLUDES=-I..  -I$(PIN_ROOT)/extras/xed2-intel64/include -I$(PIN_ROOT)/source/include -I$(PIN_ROOT)/source/include/gen
 LDFLAGS=-g -shared -Wl,-Bsymbolic -Wl,--version-script=$(PIN_ROOT)/source/include/pintool.ver
 LIBPATHS=-L$(PIN_ROOT)/extras/xed2-intel64/lib -L$(PIN_ROOT)/intel64/lib -L$(PIN_ROOT)/intel64/lib-ext
