minor change in pin/Makefile
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1343 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/pin/Makefile
+++ b/tsan/pin/Makefile
@@ -104,7 +104,11 @@ HEADERS=../thread_sanitizer.h ../ts_util.h
 #all_tests: simple_pin_test.so detach_example.so
 #%.so: %.$(OBJ)
 #	$(CXX) $(LDFLAGS) $(LIBPATHS) -o $@ $<  $(LIBS)
+#
+#
+win_test.exe: win_test.cpp
+	cl /Zi $<
 
 
 clean:
-	rm -fv *.so *.o *.obj *.dll core* pintool.log*
+	rm -fv *.so *.o *.obj *.dll core* pintool.log* pin.log *.exp *.lib *.pdb *.ilk  *.exe
