Re-factor unittests, prepare for googletest
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1357 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -3,27 +3,26 @@ CXX=g++
 SUFFIX=
 CXXFLAGS=
 
-all: racecheck_unittest${SUFFIX} bigtest${SUFFIX}
-# + false_sharing_unittest${SUFFIX}
-O1: 
-	make SUFFIX=.O1 CXXFLAGS="-O1 -fno-inline"
-O2: 
-	make SUFFIX=.O2 CXXFLAGS="-O2 -fno-inline"
-all_opt: all O1 O2
+all: racecheck_unittest bigtest
 
 DYNAMIC_ANNOTATIONS_DIR=../dynamic_annotations
 DYNAMIC_ANNOTATIONS_H=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.h
 DYNAMIC_ANNOTATIONS_CC=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.cc
 DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_CC} ${DYNAMIC_ANNOTATIONS_H}
 
-%${SUFFIX}: %.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_pthread.h
-	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow  \
-		 -I${DYNAMIC_ANNOTATIONS_DIR} ${DYNAMIC_ANNOTATIONS_CC} \
-		 -lpthread -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -o $@
+racecheck_unittest: racecheck_unittest.o old_test_suite.o ${DYNAMIC_ANNOTATIONS}
+	g++ -lpthread racecheck_unittest.o old_test_suite.o ${DYNAMIC_ANNOTATIONS_CC} -o $@
+
+bigtest: bigtest.o
+	g++ -lpthread bigtest.o ${DYNAMIC_ANNOTATIONS_CC} -o $@
+
+%.o: %.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_pthread.h old_test_suite.h test_utils.h
+	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function  \
+		 -I${DYNAMIC_ANNOTATIONS_DIR} -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -c -o $@
 
 win: racecheck_unittest.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_win.h
 	cl.exe ${CXXFLAGS} -DDYNAMIC_ANNOTATIONS_ENABLED=1 -DWIN32 \
 		-I${DYNAMIC_ANNOTATIONS_DIR} racecheck_unittest.cc ${DYNAMIC_ANNOTATIONS_CC}
 
 clean:
-	rm -f racecheck_unittest bigtest *.O1 *.O2 *.obj
+	rm -rf racecheck_unittest bigtest *.o *.O1 *.O2 *.obj *.dSYM
