--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -1,7 +1,8 @@
-VALGRIND_SRC_ROOT=../third_party/valgrind
+VALGRIND_ROOT=../third_party/valgrind
 VALGRIND_INST_ROOT=/tmp/tsan_inst
 STLPORT_ROOT=../third_party/stlport
-GOOGLETEST_ROOT=../third_party/googletest
+GTEST_ROOT=../third_party/googletest
+OFFLINE=1
 
 CC=gcc
 COPT=-O -fno-omit-frame-pointer
@@ -18,7 +19,7 @@ LDFLAGS=
 
 VG_CXXFLAGS=-fno-rtti -fno-stack-protector
 VG_DEFINES=-DVGA_$(ARCH)=1 -DVGO_$(OS)=1 -DVGP_$(ARCH_OS)=1 -D_STLP_NO_IOSTREAMS=1 -DTS_VALGRIND=1
-VG_INCLUDES=-I$(VALGRIND_SRC_ROOT) -I$(VALGRIND_SRC_ROOT)/include -I$(VALGRIND_SRC_ROOT)/VEX/pub -I$(STLPORT_ROOT)
+VG_INCLUDES=-I$(VALGRIND_ROOT) -I$(VALGRIND_ROOT)/include -I$(VALGRIND_ROOT)/VEX/pub -I$(STLPORT_ROOT)
 
 PIN_CXXFLAGS=-fPIC
 PIN_DEFINES=-DBIGARRAY_MULTIPLIER=1 -DUSING_XED  -DTARGET_$(PIN_ARCH2)  -DHOST_$(PIN_ARCH2)   -DTARGET_LINUX
@@ -68,18 +69,20 @@ endif
 
 
 
-VALGRIND_LIBS=$(VALGRIND_SRC_ROOT)/coregrind/libcoregrind-$(ARCHOS).a \
-		  $(VALGRIND_SRC_ROOT)/VEX/libvex-$(ARCHOS).a
+VALGRIND_LIBS=$(VALGRIND_ROOT)/coregrind/libcoregrind-$(ARCHOS).a \
+		  $(VALGRIND_ROOT)/VEX/libvex-$(ARCHOS).a
 
 # prefix of binary files
 P=bin/$(ARCHOS)$(D)-
+VGP=$(P)-vg-
+PINP=$(P)-pin-
 
 dummy:
 	@echo "For 64-bit Linux build: make l64"
 	@echo "For 32-bit Linux build: make l32"
 	@echo "For mixed  Linux build: make l"
 
-all: tsan_valgrind tsan_pin tsan_offline test
+all: TS_valgrind TS_pin TS_offline test
 
 l: l32 l64
 l64: l64o l64d
@@ -100,64 +103,72 @@ install_l: l
 	cp -v bin/tsan* bin/vgpreload_tsan* $(VALGRIND_INST_ROOT)/lib/valgrind
 
 
-tsan_valgrind:  bin bin/tsan$D-$(ARCHOS) bin/vgpreload_tsan$D-$(ARCHOS).so
+ifeq ($(VALGRIND_ROOT), )
+TS_valgrind:
+	@echo VALGRIND_ROOT is not set. Not building the Valgrind-based variant.
+else
+TS_valgrind:  bin bin/tsan$D-$(ARCHOS) bin/vgpreload_tsan$D-$(ARCHOS).so
+endif
+
+ifeq ($(PIN_ROOT), )
+TS_pin:
+	@echo PIN_ROOT is not set. Not building the PIN-based variant.
+else
+TS_pin: bin $(P)ts_pin.$(SO)
+endif
+
+ifeq ($(OFFLINE), 1)
+TS_offline: bin $(P)ts_offline
+else
+TS_offline:
+endif
 
 bin:
 	mkdir -p bin
 
 TS_HEADERS=thread_sanitizer.h ts_util.h suppressions.h
+
+TS_VG_OBJECTS=$(VGP)thread_sanitizer.o $(VGP)ts_valgrind.o $(VGP)ts_util.o
 TS_VG_HEADERS=ts_valgrind.h ts_valgrind_client_requests.h ts_wrap_and_ignore.h
+
+TS_PIN_OBJECTS=$(PINP)ts_pin.$(OBJ) $(PINP)ts_util.$(OBJ) $(PINP)thread_sanitizer.$(OBJ)
 
 $(P)%.o: %.cc $(TS_HEADERS)
 	$(CXX) $(CXXFLAGS) $(ARCHFLAGS) -o $@ -c $< $(DEFINES)
 
-$(P)vg-%.o: %.cc $(TS_HEADERS) $(TS_VG_HEADERS)
+$(VGP)%.o: %.cc $(TS_HEADERS) $(TS_VG_HEADERS)
 	$(CXX) $(CXXFLAGS) $(VG_CXXFLAGS) $(ARCHFLAGS) $(VG_INCLUDES) $(VG_DEFINES) -o $@ -c $< $(DEFINES)
 
-$(P)pin-%.o: %.cc $(TS_HEADERS) $(TS_PIN_HEADERS)
+$(PINP)%.o: %.cc $(TS_HEADERS) $(TS_PIN_HEADERS)
 	$(CXX) $(CXXFLAGS) $(PIN_CXXFLAGS) $(ARCHFLAGS) $(PIN_INCLUDES) $(PIN_DEFINES) -o $@ -c $< $(DEFINES)
 
 $(P)gtest-%.o: %.cc $(TS_HEADERS)
-	$(CXX) $(CXXFLAGS) $(ARCHFLAGS) -I$(GOOGLETEST_ROOT)/include -o $@ -c $<
+	$(CXX) $(CXXFLAGS) $(ARCHFLAGS) -I$(GTEST_ROOT)/include -o $@ -c $<
 
 $(P)preload-%.o: %.c $(TS_HEADERS) $(TS_VG_HEADERS)
 	$(CC) $(CFLAGS) $(ARCHFLAGS) $(VG_INCLUDES) $(VG_DEFINES) -o $@ -c $<
 
-bin/tsan$(D)-$(ARCHOS): $(P)vg-thread_sanitizer.o $(P)vg-ts_valgrind.o $(P)vg-ts_util.o
+bin/tsan$(D)-$(ARCHOS): $(TS_VG_OBJECTS)
 	$(LD) $(LDFLAGS) $(ARCHFLAGS) -static -Wl,-defsym,valt_load_address=0x38000000 -nodefaultlibs -nostartfiles \
-		-u _start  -Wl,-T,$(VALGRIND_SRC_ROOT)/valt_load_address_$(ARCH_OS).lds  -o $@ $^ \
+		-u _start  -Wl,-T,$(VALGRIND_ROOT)/valt_load_address_$(ARCH_OS).lds  -o $@ $^ \
 		$(VALGRIND_LIBS) -lgcc
 
 bin/vgpreload_tsan$(D)-$(ARCHOS).so: $(P)preload-ts_valgrind_intercepts.o
 	$(LD) $(LDFLAGS)  $(ARCHFLAGS) -nodefaultlibs -shared -Wl,-z,interpose,-z,initfirst -o $@  $<
 
-tsan_offline: bin bin/ts_offline_$(ARCHOS)
-	
-bin/ts_offline_$(ARCHOS): $(P)ts_offline.o $(P)thread_sanitizer.o $(P)ts_util.o
+$(P)ts_offline: $(P)ts_offline.o $(P)thread_sanitizer.o $(P)ts_util.o
 	$(LD) $(LDFLAGS) $(ARCHFLAGS) -o $@ $^
 
-test: bin bin/suppressions_test_${ARCHOS}$(D)
+test: bin $(P)suppressions_test
 
-bin/suppressions_test_${ARCHOS}$(D): $(P)gtest-suppressions_test.o $(P)suppressions.o $(P)ts_util.o $(GOOGLETEST_ROOT)/make/gtest_main_${ARCH}.a
+$(P)suppressions_test: $(P)gtest-suppressions_test.o $(P)suppressions.o $(P)ts_util.o $(GTEST_ROOT)/make/gtest_main_${ARCH}.a
 	$(LD) $(LDFLAGS) $(ARCHFLAGS) -o $@ $^
 
-$(GOOGLETEST_ROOT)/make/gtest_main_$(ARCH).a:
-	cd $(GOOGLETEST_ROOT)/make && $(MAKE) clean && $(MAKE) CXXFLAGS=$(ARCHFLAGS) && mv gtest_main.a gtest_main_$(ARCH).a
-
-
-TS_PIN_OBJECTS=$(P)pin-ts_pin.$(OBJ) $(P)pin-ts_util.$(OBJ) $(P)pin-thread_sanitizer.$(OBJ)
-
-
+$(GTEST_ROOT)/make/gtest_main_$(ARCH).a:
+	cd $(GTEST_ROOT)/make && $(MAKE) clean && $(MAKE) CXXFLAGS=$(ARCHFLAGS) && mv gtest_main.a gtest_main_$(ARCH).a
 
 $(P)ts_pin.so: $(TS_PIN_OBJECTS)
 	$(LD) $(ARCHFLAGS) $(PIN_LDFLAGS) $(PIN_LIBPATHS) -o $@ $^  $(PIN_LIBS)
-
-ifeq ($(PIN_ROOT), )
-tsan_pin:
-	@echo "Set PIN_ROOT to build the PIN-based version"
-else
-tsan_pin: $(P)ts_pin.$(SO)
-endif
 
 clean:
 	rm -rfv bin core* pintool.log* pin.log
